# BreathX

./: .env.example  .gitignore  LICENSE  README.md  absolute_rectification.py  align_trends.py  api_clients.py  app.py  audit_accuracy.py  global_sync.py  inspect_data.py  purge_cache.py  render.yaml  requirements.txt  spatial_intelligence.py
.claude/: settings.local.json
database/: sample_aqi_data.csv  schema.sql  schema_pg.sql
docs/: API.md
haskell-service/: BreathX.cabal
haskell-service/src/: Main.hs
static/css/: style.css
static/js/: script.js
templates/: 404.html  alerts.html  city_details.html  compare.html  dashboard.html  index.html  recommendations.html  reports.html
