cabal-version: 3.0
name:                BreathX
version:             1.0.0
synopsis:           BreathX AQI Analysis Microservice
description:        Haskell microservice for urban air quality analysis
license:            MIT
build-type:         Simple

executable BreathX
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:
      base >= 4.17 && < 5
    , aeson >= 2.1
    , warp >= 3.3
    , wai >= 3.2
    , http-types >= 0.12
    , bytestring >= 0.10
    , text >= 2.0
    , containers >= 0.6
    , vector >= 0.13
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded
